# csv_converter

./: .gitignore  Cargo.toml  LICENSE  README.md  csv_converter.rb
.github/workflows/: testing.yml
src/: cli.rs  config.rs  csv.rs  lib.rs  main.rs  process.rs
tests/: config.csv  end2end_test.rs  expected_output.csv  input.csv
